--- a/main.css
+++ b/main.css
@@ -1,3 +1,6 @@
-body  {
-    color: red;
- }
+.red-text {
+    color: purple;
+    margin-left: 20px;
+    text-align: center;
+    font-weight: 700;
+}
